--- a/package.json
+++ b/package.json
@@ -1,39 +1,60 @@
 {
   "name": "gabriel-kitchen",
-  "version": "1.0.0",
   "private": true,
+  "version": "1.0.0",
   "type": "module",
-  "engines": {
-    "node": "20.x"
-  },
+  "engines": { "node": ">=18" },
   "scripts": {
     "dev": "vite",
+    "dev:web": "vite",
     "dev:api": "tsx watch server/index.ts",
+    "dev:full": "concurrently -k \"npm:dev:api\" \"npm:dev:web\"",
     "build:web": "vite build",
     "build:api": "tsc -p server/tsconfig.json",
     "build": "npm run build:web && npm run build:api",
+    "migrate": "tsx server/migrate.ts",
     "preview": "vite preview",
-    "start": "node server/dist/index.js",
-    "migrate": "tsx server/migrate.ts"
+    "start": "node server/dist/index.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.54.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
+    "concurrently": "^9.2.0",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "helmet": "^7.0.0",
+    "express": "^4.18.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.5"
+    "lucide-react": "^0.533.0",
+    "pg": "^8.16.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "tsx": "^4.20.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.17",
+    "@eslint/js": "^9.9.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.12.7",
-    "@types/pg": "^8.10.7",
-    "typescript": "^5.4.5",
-    "tsx": "^4.16.2",
-    "vite": "^5.2.0"
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.14.12",
+    "@types/pg": "^8.10.2",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "globals": "^15.9.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2"
   }
 }
