--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,12 +3,13 @@
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "server/dist",
-    "rootDir": "server",
+    "rootDir": ".",
+    "outDir": "dist",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "resolveJsonModule": true
   },
-  "include": ["server/**/*.ts"]
+  "include": ["**/*.ts"],
+  "exclude": ["dist"]
 }
